Moved testing helpers to separate assembly, created separate assembly for integration tests, added some new methods to Simple class.

--- a/src/OpenPGPTestingHelpers/OpenPGPTestingHelpers.csproj
+++ b/src/OpenPGPTestingHelpers/OpenPGPTestingHelpers.csproj
@@ -3,14 +3,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{48FD78EA-C8F0-48BE-9B42-242E1E57AA06}</ProjectGuid>
-    <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <ProjectGuid>{AF6F9B54-67E3-4E7D-AF60-E40E6494B864}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OpenPGPTest</RootNamespace>
-    <AssemblyName>OpenPGPTest</AssemblyName>
+    <RootNamespace>OpenPGPTestingHelpers</RootNamespace>
+    <AssemblyName>OpenPGPTestingHelpers</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,38 +40,19 @@
       <HintPath>..\..\lib\MbUnit.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>4.0</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>4.0</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data.DataSetExtensions">
-      <RequiredTargetFramework>4.0</RequiredTargetFramework>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
-    <Compile Include="Core\BigEndianBitConverterTest.cs" />
-    <Compile Include="Core\PGPTimeTest.cs" />
+    <Compile Include="AssertionExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\OpenPGPTestingHelpers\OpenPGPTestingHelpers.csproj">
-      <Project>{AF6F9B54-67E3-4E7D-AF60-E40E6494B864}</Project>
-      <Name>OpenPGPTestingHelpers</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\OpenPGP\OpenPGP.csproj">
-      <Project>{36328A92-8BCF-4C21-9AE5-C9978A69531C}</Project>
-      <Name>OpenPGP</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="IO\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
