--- a/src/OpenPGP/OpenPGP.csproj
+++ b/src/OpenPGP/OpenPGP.csproj
@@ -51,6 +51,7 @@
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
     <Compile Include="Core\BigEndianBitConverter.cs" />
+    <Compile Include="Core\Crc24Computer.cs" />
     <Compile Include="Core\KeyIdentifier.cs" />
     <Compile Include="Core\MultiPrecisionInteger.cs" />
     <Compile Include="Core\PGPTime.cs" />
