--- a/src/OpenPGPTest/OpenPGPTest.csproj
+++ b/src/OpenPGPTest/OpenPGPTest.csproj
@@ -59,6 +59,7 @@
     </Compile>
     <Compile Include="Core\BigEndianBitConverterTest.cs" />
     <Compile Include="Core\PGPTimeTest.cs" />
+    <Compile Include="Core\Crc24ComputerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -76,6 +77,13 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="TestData\Plaintext001.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="TestData\ArmoredSymmetric01.txt.asc" />
+    <EmbeddedResource Include="TestData\BinarySymmetric01.txt.gpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="TestData\Passphrases.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
