--- a/src/OpenPGPTestingHelpers/OpenPGPTestingHelpers.csproj
+++ b/src/OpenPGPTestingHelpers/OpenPGPTestingHelpers.csproj
@@ -53,6 +53,7 @@
     </Compile>
     <Compile Include="AssertionExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringToBytesConverter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
