--- a/src/OpenPGP/OpenPGP.csproj
+++ b/src/OpenPGP/OpenPGP.csproj
@@ -52,12 +52,12 @@
     </Compile>
     <Compile Include="Core\BigEndianBitConverter.cs" />
     <Compile Include="Core\Crc24Computer.cs" />
+    <Compile Include="Core\IDecryptionSecretDataProvider.cs" />
     <Compile Include="Core\KeyIdentifier.cs" />
     <Compile Include="Core\MultiPrecisionInteger.cs" />
     <Compile Include="Core\PacketTypes.cs" />
     <Compile Include="Core\PGPTime.cs" />
     <Compile Include="DecryptResult.cs" />
-    <Compile Include="ISimpleDecryptionHelper.cs" />
     <Compile Include="Security\Cryptography\Camellia.cs" />
     <Compile Include="Simple.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
