Changed signing key to a reference

--- a/src/OpenPGP/OpenPGP.csproj
+++ b/src/OpenPGP/OpenPGP.csproj
@@ -35,7 +35,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>OpenPGP.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\OpenPGP.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -69,10 +69,12 @@
     </CodeAnalysisDictionary>
   </ItemGroup>
   <ItemGroup>
-    <None Include="OpenPGP.snk" />
+    <Folder Include="IO\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="IO\" />
+    <None Include="..\OpenPGP.snk">
+      <Link>OpenPGP.snk</Link>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
