--- a/src/OpenPGPTestingHelpers/OpenPGPTestingHelpers.csproj
+++ b/src/OpenPGPTestingHelpers/OpenPGPTestingHelpers.csproj
@@ -52,6 +52,7 @@
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
     <Compile Include="AssertionExtensions.cs" />
+    <Compile Include="BaseFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceHelper.cs" />
     <Compile Include="StringToBytesConverter.cs" />
