--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@ Thumbs.db
 _ReSharper*
 *resharper*
 
+# MonoDevelop Files  #
+######################
+*.userprefs
+*.pidb
+*/test-results
 
 # Output             #
 ######################
