Added test for unexpected end of armored data

--- a/src/OpenPGPTest/OpenPGPTest.csproj
+++ b/src/OpenPGPTest/OpenPGPTest.csproj
@@ -81,6 +81,9 @@
     <EmbeddedResource Include="TestData\Plaintext003.txt" />
     <EmbeddedResource Include="TestData\Plaintext002.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="TestData\UnexpectedEndOfArmor.txt.asc" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
