--- a/src/OpenPGP/OpenPGP.csproj
+++ b/src/OpenPGP/OpenPGP.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\CustomDictionary.xml">
       <Link>CustomDictionary.xml</Link>
+      <SubType>Designer</SubType>
     </CodeAnalysisDictionary>
   </ItemGroup>
   <ItemGroup>
